2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py:
	  Activate debug logging.

2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Make StartWindow loggable.
	  Handle failures when getting lists or adding to show CouchDB
	  is not running.
	  Fix shopping list count by getting by context, although we're
	  still wrong since we count closed shopping items too.

2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Add 'add' to add a thing.
	  Add getThingsByContext functions.

2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Make due date button/unsetting work.
	  Start implementing add_thing so we can reuse dialog for
	  editing existing things.

2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Add error dialog.
	  Only show list of things if we didn't have an error.

2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/by-context (added):
	* couchdb/views/by-context/map.js (added):
	  Add a view to get things by context.

2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/error.py (added):
	  Add a window to show an error.
	  Ugly right now, improve later.

2010-04-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/replicate.py:
	  Add http:// to target URL.  Allows doing
	  gtd replicate add level

2010-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  New window now allows selecting contexts/projects and setting due
	  date.

2010-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Set default type of a Thing.

2010-02-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py: